[package]
name = "bevy-ui-navigation"
authors = ["Nicola Papale"]
description = "A bevy plugin to make implementing ui navigation in your game a piece of cake"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = ["bevy", "ui", "navigation", "keyboard", "gamepad"]
categories = ["game-development", "accessibility", "gui"]
repository = "https://github.com/nicopap/ui-navigation"
homepage = "https://github.com/nicopap/ui-navigation"
exclude = ["assets", ".github"]
version = "0.33.0"
rust-version = "1.70"
edition = "2021"

[features]
default = ["bevy_ui", "bevy_reflect", "pointer_focus"]
bevy_reflect = []
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_render", "bevy_mod_picking?/backend_bevy_ui"]
pointer_focus = ["bevy_mod_picking"]
cuicui_chirp = ["cuicui_dsl", "dep:cuicui_chirp"]

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_asset"] }
bevy_mod_picking = { version = "0.16.0", optional = true, default-features = false }
cuicui_chirp = { version = "0.10.0", optional = true, default-features = false, features = ["macros"] }
cuicui_dsl = { version = "0.10.0", optional = true }
non-empty-vec = { version = "0.2.2", default-features = false }

[dev-dependencies]
fastrand = "1.7"
cuicui_layout_bevy_ui = { version = "0.10.0", default-features = false }
cuicui_layout = { version = "0.10.0", default-features = false }
bevy = { version = "0.12", default-features = false, features = ["bevy_asset", "png", "x11", "default_font"] }

[[example]]
name = "ultimate_menu_navigation"
required-features = ["cuicui_chirp", "bevy/filesystem_watcher", "cuicui_layout_bevy_ui/chirp", "cuicui_layout/reflect"]
