[package]
name = "bevy-ui-navigation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
non-empty-vec = { version = "0.2.1", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = ["render", "bevy_wgpu", "x11", "png" ] }
